# PixSieve

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: NEXTSTEP.md  api.md  changelog.md  cli.md  operations.md  optimizations.md  performance.md  ui-and-performance-plan.md
dupefinder/: app.py  config.py
dupefinder/api/: __init__.py  operations_routes.py
dupefinder/cli/: __init__.py  operations_orchestrator.py  orchestrator.py
dupefinder/operations/: __init__.py  metadata.py  move.py  pipeline.py  sort.py
dupefinder/templates/: index.html
dupefinder/utils/: __init__.py
pixsieve/: __init__.py  __main__.py  app.py  config.py  lsh.py  models.py  state.py  user_config.py
pixsieve/api/: __init__.py  operations_routes.py  orchestrator.py  routes.py
pixsieve/cli/: __init__.py  actions.py  arg_parser.py  interactive.py  orchestrator.py  reporting.py
pixsieve/database/: __init__.py  connection.py  core.py  maintenance.py  operations.py  schema.py  utils.py
pixsieve/operations/: __init__.py  cleanup.py  convert.py  metadata.py  move.py  pipeline.py  rename.py  repair.py  sort.py
pixsieve/scanner/: __init__.py  analysis.py  deduplication.py  dependencies.py  file_discovery.py  hashing.py  parallel.py
pixsieve/static/css/: app.css
pixsieve/static/js/: app.js
pixsieve/templates/: index.html
pixsieve/utils/: __init__.py  exporters.py  formatters.py  operations.py  platform.py  selection.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_api_operations.py  test_cli_operations.py  test_database.py  test_lsh.py  test_models.py  test_operations_cleanup.py  test_operations_convert.py  test_operations_metadata.py  test_operations_move.py  test_operations_pipeline.py  test_operations_rename.py  test_operations_sort.py  test_scanner.py  test_utils_operations.py
